packages/layout/src/main/Main.module.css
.main {
  box-sizing: border-box;
  flex: 1 1 auto;
  min-width: 0;
  height: 100%;
  overflow: hidden auto;
  padding: 1rem;

  &:focus-visible {
    box-shadow: var(--midas-state-focus-inset);
    outline: none;

    @media (forced-colors: active) {
      outline: var(--midas-state-focus-contrast-mode-outline) solid highlight;
      outline-offset: calc(var(--midas-state-focus-contrast-mode-outline) * -1);
    }
  }
}

